[package]
name = "bevy_jam_3"
publish = false
version = "0.1.0"
authors = ["Sean Deneen"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/sk-scd91/bevyjam3-sideeffects/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_asset_loader = "0.16.0"
bevy_kira_audio = "0.15.0"
rand = "0.8.5"
